methods.flowerpot.FlowerCase.scala.error
Erreur de compilation :
FlowerCase:14: error: not found: value color
  faireFleur(color.black)
             ^